<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.gve.testapplication.loginuser.presentation.LoginUserActivity">


    <ImageView
        android:id="@+id/user_login_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/user_login_image_content_descrip" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_normal"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_login_edit_text"
            android:hint="@string/user_login_hint"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/spacing_normal" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/user_login_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/user_login_button"
        android:textStyle="bold" />

</LinearLayout>
