<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content" >


    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:text="@string/dialog_explanation_text"
        android:textSize="@dimen/text_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/dialog_text"
        android:weightSum="2">

    <Button
        android:id="@+id/dialog_owner_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_owner_page"
        android:layout_margin="@dimen/spacing_small"
        android:padding="@dimen/spacing_small"
        android:textColor="@color/colorPrimary"
        android:background="@color/background_card"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/dialog_repo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_repo_page"
        android:layout_margin="@dimen/spacing_small"
        android:padding="@dimen/spacing_small"
        android:textColor="@color/colorPrimary"
        android:background="@color/background_card"
        android:layout_weight="1"/>
    </LinearLayout>

</RelativeLayout>